--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,33 @@
-.container {
+#page-container{ 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+}
+
+#title {
+    margin: 0;
+}
+.author {
+    font-style: italic;
+}
+
+#choose-square {
+    max-width: 200px;
+    margin: 10px;
+}
+#etch-container {
     display:flex;
     flex-wrap: wrap;
-    width: 90vh;
-    justify-content: space-evenly;
-    align-items: start;
+    width: 500px;
+    height: 500px;
+    border: 1px solid black;
+}
+
+.square {
+    
+}
+
+div#etch-container > div:hover {
+    background-color: red;
 }
