--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,20 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+body {
+    min-height: 100vh;
+    width: 100%;
+    font-family: monospace, sans-serif;
+    font-size: 13px;
+}
 #page-container{ 
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0;
+    height: 100vh;
+    justify-content: space-between;
+    margin: 0 auto;
 }
 
 #title {
@@ -19,8 +31,8 @@
 #etch-container {
     display:flex;
     flex-wrap: wrap;
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     border: 1px solid black;
 }
 
@@ -28,8 +40,52 @@
     
 }
 
+#content-container {
+    display: flex;
+
+
+}
+#selections {
+    display: flex;
+    flex-direction: column;
+    max-width: 800px;
+    margin-right: 20px;
+}
+.selections-1 {
+    display: flex;
+    flex-direction: row;
+}
+.tools, .colours{
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+}
+.tools button {
+    margin: 5px;
+}
+.colours button {
+    margin: 5px;
+}
 /*
 div#etch-container > div:hover {
     background-color: red;
 }
 */
+#footer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #373737;
+    color: white;
+    width: 100%;
+    padding: 0px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    color: aliceblue;
+}
